[package]
name = "algorithms_in_practice"
version = "0.1.0"
edition = "2021"

[dependencies]

[[example]]
name = "object_tracking"
path = "examples/object_tracking.rs"

[[example]]
name = "behavior_tree"
path = "examples/behavior_tree.rs"

[[example]]
name = "robot_pathfinding"
path = "examples/robot_pathfinding.rs"

[[example]]
name = "energy_optimization"
path = "examples/energy_optimization.rs"